feat: open folder after exporting an instance