@@ -167,7 +167,8 @@ public enum OS {
     public static void openFileExplorer(Path path, boolean toFile) {
         try {
             if ((toFile || !Files.isDirectory(path)) && OS.isWindows()) {
-                new ProcessBuilder("explorer", "/select," + path.toAbsolutePath()).start();
+                LogManager.info("/select," + path.toAbsolutePath());
+                Runtime.getRuntime().exec("explorer /select," + path.toAbsolutePath());
             } else {
                 Path pathToOpen = path;
 
